<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.peterson.newyorktimesearch.activities.Settings">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_date"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints"
        android:layout_alignBaseline="@+id/edtDatePicker"
        android:layout_alignBottom="@+id/edtDatePicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/edtDatePicker"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        tools:ignore="RtlHardcoded"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="17dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_older"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints"
        android:layout_alignBaseline="@+id/spinner"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="121dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/edtDatePicker"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:entries="@array/orders"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"
        android:layout_marginBottom="42dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_desk_values"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints"
        android:layout_alignBaseline="@+id/checkBox"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/arts"
        tools:ignore="MissingConstraints,RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:layout_above="@+id/checkBox2"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_marginBottom="16dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:text="@string/fashion_et_style"
        tools:layout_editor_absoluteY="303dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        tools:ignore="MissingConstraints,RtlHardcoded"
        android:layout_above="@+id/checkBox3"
        android:layout_alignRight="@+id/edtDatePicker"
        android:layout_alignEnd="@+id/edtDatePicker" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/sports"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginBottom="32dp"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2" />

    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/save"
        android:onClick="click"
        tools:ignore="MissingConstraints,RtlHardcoded"
        tools:layout_editor_absoluteY="437dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_marginBottom="69dp" />


</RelativeLayout>
